--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.4.5",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "qs": "^6.7.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
